--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,13 @@
     <title>Developer-Portfolio</title>
 
     <!-- Font Awesome -->
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
+
 <body>
     <header class="header">
         <nav>
@@ -27,7 +31,8 @@
             <div>
                 <h3 class="banner-sub-title">Hi, I am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
-                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
+                    Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download cv</button>
             </div>
             <img src="images/hardy.png" alt="">
@@ -37,7 +42,10 @@
     <main>
         <section class="about">
             <h3 class="section-title">ABout Me</h3>
-            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing
+                simple, clean and slick websites that provide real value to the end user. Thousands of clients have
+                procured exceptional resulfs while working with me. Delivering work within time and budget which meets
+                clients requirements in our mata.</p>
 
             <div class="about-info-container">
                 <div class="about-info">
@@ -58,6 +66,115 @@
                 </div>
             </div>
         </section>
+
+        <!-- What i do section -->
+        <section class="what-i-do">
+            <h3 class="section-title">What I do</h3>
+            <p class="section-description">I have more than 10 years experience building software for clients all over
+                the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to
+                find out more about my experience? Check out my online resume and project portfolio.</p>
+
+            <!-- .skill-container>.skill*4>img+p.skill-title+p.skill-description>lorem15 -->
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-titile">Vanilla JavaScript</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat in
+                        totam, aut iste a rerum.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-titile">Reacts</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat in
+                        totam, aut iste a rerum.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-titile">Node.js</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat in
+                        totam, aut iste a rerum.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-titile">MongoDB</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat in
+                        totam, aut iste a rerum.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Resume section -->
+        <section class="resume ">
+            <h3 class="section-title">A summary of My Resume</h3>
+
+            <div class="resume-content">
+                <div>
+                    <h3 class="resume-title">My Education</h3>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                
+                </div>
+                
+
+                <!-- Resume right part -->
+                <div>
+                    <h3 class="resume-title">My Experience</h3>
+                    <div class="resume-item">
+                        <h4 class="title">Sr. Font End Developer</h4>
+                        <h5 class="sub-title">Apple Inc / 2020 - Current</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+
+                    <div class="resume-item">
+                        <h4 class="title">Sr. Font End Developer</h4>
+                        <h5 class="sub-title">Apple Inc / 2020 - Current</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+
+                    <div class="resume-item">
+                        <h4 class="title">Sr. Font End Developer</h4>
+                        <h5 class="sub-title">Apple Inc / 2020 - Current</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="resume-btn">
+                <button class="btn-primary">Download cv</button>
+            </div>
+        </section>
+
     </main>
 
     <footer>
@@ -66,4 +183,5 @@
 
 
 </body>
+
 </html>
