--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer-Portfolio</title>
 
-    <!-- Font Awesome -->
+    <!-- Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/63c1414752.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
@@ -33,7 +36,7 @@
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
                     Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download cv</button>
+                <button class="btn-primary"><i class="fa-solid fa-arrow-down"></i> Download CV</button>
             </div>
             <img src="images/hardy.png" alt="">
         </div>
@@ -171,7 +174,7 @@
             </div>
 
             <div class="resume-btn">
-                <button class="btn-primary">Download cv</button>
+                <button class="btn-primary"><i class="fa-solid fa-arrow-down"></i> Download CV</button>
             </div>
         </section>
         
@@ -203,7 +206,7 @@
                     <br>
                     <input type="email" name="" id="" placeholder="Your email">
                     <br>
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                    <textarea name ="" id="" cols="30" rows="10" placeholder="Message"></textarea>
                     <br>
                     <input type="submit" value="Submit" class="btn-primary">
                 </form>
